@@ -299,8 +299,104 @@ svg {
     text-align: left;
     left: 0;
 }
+
+#notPlaying {
+    background-color: #232629;
+    color: #eff0f1;
+}
+
 #pageLoading {
     background-color: #232629;
     color: #eff0f1;
     z-index: 1000;
+}
+
+input[type=range] {
+    height: 25px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+}
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #3daee9;
+    border-radius: 1px;
+    border: 0px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #232629;
+    border: 1px solid #232629;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #eff0f1;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -7px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background: #3daee9;
+}
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background: #3daee9;
+    border-radius: 1px;
+    border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+    box-shadow: 0px 0px 0px #232629;
+    border: 1px solid #232629;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #eff0f1;
+    cursor: pointer;
+}
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    animate: 0.2s;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+    background: #3daee9;
+    border: 0px solid #000000;
+    border-radius: 2px;
+    box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+    background: #3daee9;
+    border: 0px solid #000000;
+    border-radius: 2px;
+    box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-thumb {
+    margin-top: 1px;
+    box-shadow: 0px 0px 0px #232629;
+    border: 1px solid #232629;
+    height: 18px;
+    width: 18px;
+    border-radius: 25px;
+    background: #eff0f1;
+    cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+    background: #3daee9;
+}
+input[type=range]:focus::-ms-fill-upper {
+    background: #3daee9;
 }
