@@ -3,21 +3,30 @@ Current Change Log
 ================
 
 Version 1.1.0
++(BUG, BLOCKER) - volume button, settings and slider refreshes with every zone update.  This prevents the input range slider from being usable.  Also causes frequent page repaints.
++(BUG, minor) - seekPosition and seekLength refreshes with every zone update.  Causes frequent page repaints.
+
 PRE-RELEASE TODO:
+- Clear all blocker bugs, prefer clear all known bugs
 - Add volume support
 - Complete regression test checklist
 - Check for impacts of Roon Server 1.3 (Build 233)
 - Complete pre tag / pre release checklist
+
+* = external bug
++ = internal bug
 
 Done
 - Complete rewrite of UI - now supports both Portrait and Landscape view
 - Added new theme based on the dominant color of the cover art
 - Added controls for Loop, Shuffle, and Auto Radio
 - Added a check to see if the extension is enabled
-- Added command line option for help and to set the server port ('node app.js -h' for options)
-- Added config file for server settings (config/local.json).  Example file "config/local.conf.EXAMPLE" shows usage.  The example file is tracked by "git".  The "config/local.conf" is not tracked by "git" so that local settings will not be clobbered by "git pull".
 - Switching zones is now much more responsive
 - Tweaked jquery.simplemarquee.js to use "span" instead of "div" due to problems with CSS layouts
+
+(Feature Request) - Added config file for server settings (config/local.json).  Example file "config/local.conf.EXAMPLE" shows usage.  The example file is tracked by "git".  The "config/local.conf" is not tracked by "git" so that local settings will not be clobbered by "git pull".
+(Feature Request) - Added command line option for help and to set the server port ('node app.js -h' for options).
+(BUGFIX) - After switching a zone, the zone_id did not update for the controls. This can lead to controlling the previous zone with the new zone's controls.
 
 ================
 Release History
